--- a/package.json
+++ b/package.json
@@ -12,16 +12,23 @@
     "version": "5.0.0"
   },
   "dependencies": {
+    "@upupming/hexo-renderer-markdown-it-plus": "^2.0.2",
     "hexo": "^5.0.0",
+    "hexo-abbrlink": "^2.2.1",
     "hexo-deployer-git": "^2.1.0",
+    "hexo-filter-github-emojis": "^2.1.0",
     "hexo-generator-archive": "^1.0.0",
     "hexo-generator-category": "^1.0.0",
-    "hexo-generator-index": "^1.0.0",
+    "hexo-generator-feed": "^2.2.0",
+    "hexo-generator-indexed": "^1.2.0",
+    "hexo-generator-search": "^2.4.0",
     "hexo-generator-tag": "^1.0.0",
+    "hexo-offline": "^1.0.0",
     "hexo-renderer-ejs": "^1.0.0",
     "hexo-renderer-jade": "^0.5.0",
-    "hexo-renderer-marked": "^3.0.0",
     "hexo-renderer-stylus": "^1.1.0",
-    "hexo-server": "^1.0.0"
+    "hexo-server": "^1.0.0",
+    "hexo-tag-aplayer": "^3.0.4",
+    "hexo-wordcount": "^6.0.1"
   }
 }
