--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "build": "hexo generate",
     "clean": "hexo clean",
     "deploy": "hexo deploy",
-    "server": "hexo server"
+    "server": "hexo server",
+    "CGS": "hexo clean && hexo generate && hexo server",
+    "CGSD": "hexo clean && hexo generate && hexo server && hexo deploy"
   },
   "hexo": {
     "version": "5.0.0"
@@ -26,6 +28,7 @@
     "hexo-offline": "^1.0.0",
     "hexo-renderer-ejs": "^1.0.0",
     "hexo-renderer-jade": "^0.5.0",
+    "hexo-renderer-pug": "^1.0.0",
     "hexo-renderer-stylus": "^1.1.0",
     "hexo-server": "^1.0.0",
     "hexo-tag-aplayer": "^3.0.4",
